# Athenas-Pallis

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
athenas-pallas/: Cargo.toml
athenas-pallas/src/: control.rs  engine.rs  error.rs  events.rs  lib.rs  metrics.rs  risk.rs  state.rs  strategy.rs  types.rs
athenas-pallas/src/backtest/: batch.rs  mod.rs
athenas-pallas/src/connectors/: binance_spot.rs  binance_user_data.rs  mod.rs
athenas-pallas/src/execution/: binance_live.rs  live.rs  mod.rs  paper.rs  sim.rs
athenas-pallas/tests/: binance_live_wiremock.rs  flatten_flow.rs  paper_flow.rs
examples/backtest_csv/: Cargo.toml
examples/backtest_csv/src/: main.rs
examples/live_binance/: Cargo.toml
examples/live_binance/src/: main.rs
examples/paper_binance/: Cargo.toml
examples/paper_binance/src/: main.rs
