[workspace]
resolver = "2"
members = ["athenas-pallas", "examples/paper_binance", "examples/backtest_csv", "examples/live_binance", "examples/system_config"]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DevomB/Athenas-Pallas"
