[package]
name = "athenas-pallas"
description = "Event-driven algorithmic trading framework (live, paper, backtest)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
binance = ["dep:tokio-tungstenite", "dep:futures-util"]
control-server = ["dep:axum", "dep:tower", "dep:hyper"]
live-trading = ["dep:reqwest"]
binance-live = ["binance", "live-trading", "dep:hmac", "dep:sha2", "dep:hex"]
tracing-full = ["dep:tracing-subscriber"]
all = ["binance-live", "control-server", "tracing-full"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "io-util"] }
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1.3"

tokio-tungstenite = { version = "0.24", optional = true, default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"
