[package]
name = "paper_binance"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
athenas-pallas = { path = "../../athenas-pallas", features = ["binance", "control-server"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = "1"
